--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* fonts */
+@font-face {
+	font-family: 'Pixel';
+	src: url('font/Pixel-LCD-7.woff') format('woff');
 }
 
+html {
+	font-size: 62.5%;
+}
+
+/* reset & common styles */
+body, ul, h1, h2, h3, p, button, a, div{
+  margin: 0;
+  color: white;
+  font-size: 1.6rem;
+  font-family: 'Pixel';
+  letter-spacing: 0.2rem;
+  list-style-type: none;
+  text-decoration: none;
+  /* border: 0.1rem solid red;   */
+  box-sizing: border-box;
+}
+
+body{
+  background: rgb(100,0,123);
+  background: radial-gradient(circle, rgba(100,0,123,1) 0%, rgba(62,20,86,1) 100%);
+  overflow: hidden;
+}
+
+button{
+  color: white;
+  padding: 1rem 2rem;
+  font-size: 1.6rem;
+  background: transparent;
+  border-radius: 5rem;
+  border: 0.1rem solid white;
+  cursor: pointer;
+  opacity: 0.7;
+}
