--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@ body, ul, h1, h2, h3, p, button, a, div{
 }
 
 body{
-  background: rgb(100,0,123);
-  background: radial-gradient(circle, rgba(100,0,123,1) 0%, rgba(62,20,86,1) 100%);
+  background: rgb(193, 161, 211);
+  background: radial-gradient(circle, rgb(193, 161, 211, 1) 0%, rgb(143, 81, 179,1) 100%);
   overflow: hidden;
 }
 
