--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -16,9 +16,13 @@
   background-color: rgb(143, 81, 179);
   padding: 1rem;
   border-radius: 14px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.5);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+}
+
+.modal button {
+  width: 80%;
 }
 
 .content {
@@ -30,11 +34,14 @@
 .content h1 {
   font-size: 3rem;
   margin: 2rem;
+
   letter-spacing: 1rem;
 }
 
-button {
-  margin: 3rem;
+.content h2 {
+  font-size: 2.5rem;
+  margin:2rem;
+
 }
 
 @media (min-width: 768px) {
